# Research-Automation-with-AI

./: .gitignore  .mcp.json  ARCHITECTURE.md  BRD.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SPEC.md  baseline.md  commitlint.config.js  docker-compose.yml  hardening-closure.md  package.json  phase_4_brd_compliance_report.md
.audit/: radon-waivers.txt
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_db.py  demo.py  init_db.py  insert_paper.py  list_models.py  pyproject.toml  qa_validation.py  requirements-lock.txt  run_ci_local.sh  test_llm.py  validate_db.py  validate_state.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_papers_unique_citation_key.py  0003_projects_owner_fk_ondelete.py  0004_workflow_runs_active_unique.py  0005_manuscript_unique.py  0006_audit_pool_approval_unique.py  0007_workflow_runs_state_check.py  0008_datasets.py  0009_bm25_index.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  _prompt_safety.py  analyst.py  base.py  critic.py  librarian.py  scribe.py
backend/app/api/: deps.py  middleware.py  rate_limit.py
backend/app/api/routes/: artifacts.py  datasets.py  health.py  papers.py  projects.py  websocket.py  workflow.py
backend/app/db/: session.py
backend/app/graph/: state.py  workflow.py
backend/app/models/: db.py  schemas.py
backend/app/services/: auth.py  bm25_store.py  citations.py  dataset_storage.py  discovery.py  discovery_router.py  export.py  fulltext_fetcher.py  llm.py  sandbox.py  unpaywall.py  vector_store.py  workflow.py
backend/app/utils/: logging.py
backend/sandbox/: Dockerfile
backend/scripts/: preflight.py  verify_hybrid_search.py
backend/tests/: test_analyst_agent.py  test_approved_pool.py  test_assemble_manuscript.py  test_audit_phase2.py  test_audit_phase2_round2.py  test_audit_phase2_round3.py  test_audit_phase2_round4.py  test_audit_phase4.py  test_cost_cap.py  test_critic_agent.py  test_datasets.py  test_discovery_service.py  test_drafting_gate.py  test_fulltext_fetcher.py  test_hardening_m1.py  test_hardening_m2.py  test_hardening_m3.py  test_hardening_m4_e2e.py  test_health.py  test_librarian_citation_keys.py  test_librarian_deduplication.py  test_llm_gateway.py  test_override_workflow.py  test_paper_persistence.py  test_phase3_graph_wiring.py  test_phase4_feature_pack.py  test_projects_crud.py  test_prompt_injection.py  test_run_graph_race.py  test_sandbox.py  test_scribe_agent.py  test_scribe_citation_validator.py  test_scribe_telemetry_and_references.py  test_security_regression.py  test_state_contract.py  test_synthesis_gate.py  test_unpaywall.py  test_vector_store.py  test_workflow_contract.py  test_workflow_gate.py
docs/: PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_PROCEDURES.md  PHASE3_IMPLEMENTATION_PLAN.md  RUNBOOK.md  architecture.drawio  branch-protection.md  brd-verification-and-phase3-plan.md  compatibility-matrix.md  hardening-report-2026-05-28.md  md_to_pdf.py  phase4-feature-pack-proposal.md
docs/agents/: analyst.md  critic.md  critic.schema.json  librarian.md  librarian_deep_dive.md  scribe.md
docs/api/: openapi.yaml
docs/workflow/: state-machine.md
frontend/: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  postcss.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/workflow/: AnalysisReview.tsx  ApprovalPanel.tsx  DatasetUploader.tsx  DraftingTelemetryChips.tsx  ExportPanel.tsx  Markdown.tsx  MatrixModal.tsx  PhaseTracker.tsx  SectionReview.tsx  SynthesisReview.tsx  diffLines.ts
frontend/lib/: api.test.ts  api.ts  types.ts  utils.test.ts  utils.ts  ws.test.ts  ws.ts
reports/: bandit.json  eslint.json  findings-matrix.md  npm-audit.json  radon-cc.txt  remediation-backlog.md
scripts/: apply_branch_protection.sh  check_forbidden_patterns.sh  check_radon_budget.sh  check_secrets.sh
