[project]
name = "researchflow-backend"
version = "0.1.0"
description = "ResearchFlow AI — FastAPI remote engine with LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhijith Anandakrishnan" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # --- Compatibility-pinned trio (+ langchain-core, the actual symbol source).
    # A reviewer hit an ImportError where langchain/langgraph pulled a pydantic
    # symbol a mismatched pydantic version no longer exported. These bounded
    # ranges keep the three in a verified-compatible window (known-good set:
    # pydantic 2.13.4 / langchain-core 1.4.0 / langgraph 1.2.1) so a loose
    # `>=` can't silently resolve to an incompatible combination. The preflight
    # asserts these floors too (scripts/preflight.py::_COMPAT_TRIO).
    "pydantic>=2.11,<3",
    "langchain-core>=1.0,<2",
    "langgraph>=1.0,<2",
    "langchain>=1.0,<2",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg>=3.1",
    "psycopg-binary>=3.1",
    "psycopg-pool>=3.2",
    "alembic>=1.13",
    "langgraph-checkpoint-postgres>=0.1",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "firebase-admin>=6.4",
    "chromadb>=0.5",
    # Phase 1: Librarian agent dependencies
    "google-genai>=1.0",
    # Anthropic Claude — alternative LLM provider (set LLM_PROVIDER=anthropic).
    # The SDK is async-native, so we don't need asyncio.to_thread wrappers.
    "anthropic>=0.40",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
    "tenacity>=8.3",
    "email-validator>=2.0",
    # Phase 2 full-text RAG: download open-access PDFs we already have URLs
    # for (Semantic Scholar openAccessPdf, arXiv) and embed into ChromaDB for
    # the Critic's RAG context (BRD FR-1.2 — local document parser).
    "pypdf>=4.0",
    # W1-A4: XXE / billion-laughs defense for arXiv Atom-feed parsing in
    # services/discovery.py. defusedxml.ElementTree is API-compatible with
    # stdlib xml.etree but rejects entity-expansion and external-entity
    # references on parse. bandit B314/B405 stop firing once this is in.
    "defusedxml>=0.7",
    # Phase 2 hybrid search (Critic RAG): sparse BM25 retrieval fused with the
    # existing ChromaDB dense search via Reciprocal Rank Fusion. rank-bm25 is
    # pure-Python + numpy (numpy already arrives via chromadb), so it adds no
    # heavy transitive weight. The heavyweight cross-encoder reranker is an
    # OPTIONAL extra (see [rerank]) so the base image + default CI stay lean.
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
# Cross-encoder reranking (Critic hybrid search, stage 3). Pulls torch +
# transformers (~2-3 GB) and downloads BAAI/bge-reranker-base (~1.1 GB) at
# first use, so it is deliberately OUT of the core deps: install only on hosts
# that set RERANK_ENABLED=true. The retrieval path degrades gracefully to
# RRF-only when this extra is absent (see services/vector_store.py).
rerank = [
    "sentence-transformers>=3.0",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "types-requests",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "jsonschema>=4.20",
    # M4-A: dependency vulnerability scanner. Wired into run_ci_local.sh
    # and the hardening gate; fails CI on HIGH/CRITICAL findings.
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.utils.logging"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
